--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,19 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "proxy.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/*",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/search(.*)",
-      "dest": "proxy.js"
+      "dest": "/proxy.js"
     },
     {
       "src": "/(.*)",
